--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,8 @@
 	branch = main
 
 
+
+[submodule "AlessandroSkab/planetHoreca"]
+	path = AlessandroSkab/planetHoreca
+	url = git@github.com:AlessandroSkab/planetHoreca.git
+	branch = main
