--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,8 @@
 	path = ABC-Strategie-GitHub/abc_afe
 	url = git@github.com:ABC-Strategie-GitHub/abc_afe.git
 	branch = main
+
+[submodule "ABC-Strategie-GitHub/abc_x_planethoreca"]
+	path = ABC-Strategie-GitHub/abc_x_planethoreca
+	url = git@github.com:ABC-Strategie-GitHub/abc_x_planethoreca.git
+	branch = main
