--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,8 @@
 	path = ABC-Strategie-GitHub/abc_x_planethoreca
 	url = git@github.com:ABC-Strategie-GitHub/abc_x_planethoreca.git
 	branch = main
+
+[submodule "ABC-Strategie-GitHub/abc_mai_pos_lotnumer_selection"]
+	path = ABC-Strategie-GitHub/abc_mai_pos_lotnumer_selection
+	url = git@github.com:ABC-Strategie-GitHub/abc_mai_pos_lotnumer_selection.git
+	branch = main
