--- a/.gitmodules
+++ b/.gitmodules
@@ -24,3 +24,8 @@
 	path = ABC-Strategie-GitHub/abc_purchase_order_line_packaging_qty
 	url = git@github.com:ABC-Strategie-GitHub/abc_purchase_order_line_packaging_qty.git
 	branch = main
+
+[submodule "ABC-Strategie-GitHub/abc_bi_pos_stock"]
+	path = ABC-Strategie-GitHub/abc_bi_pos_stock
+	url = git@github.com:ABC-Strategie-GitHub/abc_bi_pos_stock.git
+	branch = main
