--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,8 @@
 	path = ABC-Strategie-GitHub/abc_printnode_base
 	url = git@github.com:ABC-Strategie-GitHub/abc_printnode_base.git
 	branch = main
+
+[submodule "ABC-Strategie-GitHub/abc_moduli_stampa_ph"]
+	path = ABC-Strategie-GitHub/abc_moduli_stampa_ph
+	url = git@github.com:ABC-Strategie-GitHub/abc_moduli_stampa_ph.git
+	branch = main
